--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   file_picker: ^8.0.0
   open_file : ^3.3.2
   path: ^1.9.1
+  firebase_core: ^3.5.0
+  firebase_messaging : ^15.0.0
+  onesignal_flutter: ^5.0.0
+  intl: ^0.18.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
